Fixed : DO-8451 - 2.0.5 QA [Search] UI : Alignment issue at Add Collection/Resource pop up

--- a/src/main/resources/css/gooru-shared.css
+++ b/src/main/resources/css/gooru-shared.css
@@ -635,6 +635,8 @@
 	color: #4e9746;
 	opacity: 1;
 	margin: 0px;
+	border-left: 0px;
+	border-top: 0px;
 }
 
 .myCourseContainer .myCousesTabMenu a.mycollectionMenu:hover,
